feat: F24Launcher v0.0.3
Versión de optimización y robustez técnica (sin features nuevas de usuario):

- Núcleo unificado de descargas e I/O (DownloadManager): streaming real a *.part,
  semáforos descargas/escrituras, escritura atómica, lock por ruta y verificación
  de hash sobre virtual threads.
- Concurrencia configurable (maxConcurrentDownloads/Writes) + caché de app purgable
  + reinicio seguro (restart_app).
- Instaladores migrados al núcleo; JRE por streaming y extracción atómica.
- Caché de metadatos (TtlCache), updates()/compat() en paralelo, UA identificable,
  HTTP/2 y caché de disco OkHttp.
- Detección de mods precisa: fingerprint CurseForge (Murmur2) + bulk Modrinth.
- Dedup de almacenamiento con hardlinks (ObjectStore content-addressed + GC).
- Arranque/huella: JVM del backend afinada + AppCDS; init del frontend en paralelo
  y sondeo adaptativo.
- Aikar flags por defecto en las instancias.
- Sistema de logs (LogManager + clientLog.ts): rotación zip por arranque, cobertura
  backend/frontend separada, captura de Throwable y sección Diagnóstico en Ajustes.
- Correcciones de estabilidad en release (congelamientos/OOM): G1GC, streaming,
  virtual threads en Javalin, reconciliación de estado al arrancar.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>